--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/AgtLucas/crusader/issues"
   },
-  "homepage": "https://github.com/AgtLucas/crusader#readme"
+  "homepage": "https://github.com/AgtLucas/crusader#readme",
+  "dependencies": {
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-flipcard": "^0.2.1"
+  }
 }
