--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "html-webpack-plugin": "^2.10.0",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
